# ps3-shared

./: main.py  pyproject.toml  setup.py
ps3_shared/entities/: error_response.py  gene_variant.py  params.py  research_data.py  task.py
ps3_shared/lib/: amqp.py  minio.py  mongo.py
ps3_shared/logger/: logger.py
