[project]
name = "ps3-shared"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "loguru>=0.7.3",
    "minio>=7.2.16",
    "pika>=1.3.2",
    "pydantic>=2.11.7",
    "pymongo>=4.13.2",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
